# BiharmonicRepair

./: README.md
Examples/: test1.ply  test2.ply  test3.ply  test4.ply
MeshRepair/: CMakeLists.txt  bbox.cpp  bbox.h  bilaplacian.h  definitions.h  geomtests.cpp  geomtests.h  grid3D.h  grid3Dlod.h  gridinterpolator.cpp  gridinterpolator.h  gridinterpolatortrilinear.cpp  gridinterpolatortrilinear.h  holerepairer.cpp  holerepairer.h  main.cpp  multigridsolver.cpp  multigridsolver.h  trianglemesh.cpp  trianglemesh.h
MeshRepair/MC/: IJK.cpp  IJK.h  InfoVoxel.cpp  InfoVoxel.h  Label.cpp  Label.h  MC_Patrons.cpp  MarchingCubes.cpp  MarchingCubes.h  Voxel048.cpp  Voxel048.h
